src/objects/Service_Configuration__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Service Configuration</relationshipLabel>
        <relationshipName>Service_Configuration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Keyword__c</fullName>
        <label>Keyword</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Appointment__c</fullName>
        <label>Service Appointment</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>verification__c</fullName>
        <defaultValue>true</defaultValue>
        <label>verification</label>
        <type>Checkbox</type>
    </fields>
    <label>Service Configuration</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Service Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>